Changelog

$Id: Changes,v 1.74 2011-03-24 16:11:40 oops Exp $

* Fri, Mar 25 2011
	- add join() api

* Thu, Mar 24 2011
	- changed internal variable name for conflict other programs
	- add file_status() api

* Wed, Mar 23 2011
	- removed fileread api. use readfile api
	- readfile and writefile api are binary safe. (changed proto type)
    - On append mode of writefile api, don't add newline any more at first.

* Tue, Mar 22 2011
	- redefine type declare with stdint

* Mon, Mar 21 2011
	- start 1.0 branch
